Bug 312209 - ksnapshot shots "nothing" sometimes
Summary: ksnapshot shots "nothing" sometimes
Status: RESOLVED FIXED
Alias: None
Product: ksnapshot
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.8.2
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Richard Moore
URL:
Keywords:
: 313625 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-12-26 01:57 UTC by FabiB
Modified: 2013-01-21 15:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments
xrandr composited ksnapshot (68.62 KB, image/png)
2012-12-26 18:51 UTC, FabiB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description FabiB 2012-12-26 01:57:48 UTC
since 4.10Beta ksnapshot do not work always in composited mode
it will only record a empty image with the correct width and height but without any visible objects

Reproducible: Sometimes

Steps to Reproduce:
1. take a screenshot of a "window under the mouse"
2. try again and again - mostly 1 of 3 times it will  not work

Actual Results:  
http://i.imgur.com/olW1I.png .. nothing

Expected Results:  
should work always

this bug is only in composited mode, without compositing enabled it works always
Comment 1 Jekyll Wu 2012-12-26 04:49:54 UTC
Works fine for me when desktop effects are enabled. Please disable(or enable) effect one by one to isolate the one causing the problem.
Comment 2 Thomas Lübking 2012-12-26 07:28:49 UTC
please try the xrender backend ("kcmshell4 kwincompositing", 3rd tab) and attach the outputs (with the disfunctional backend) of

qdbus org.kde.kwin /KWin supportInformation
xrandr -q
glxinfo -l
Comment 3 FabiB 2012-12-26 14:14:50 UTC
(In reply to comment #2)
> please try the xrender backend ("kcmshell4 kwincompositing", 3rd tab) and
> attach the outputs (with the disfunctional backend) of

with opengl (2)
http://paste.kde.org/631700/

xrandr
http://paste.kde.org/631706/

with xrandr its broken in this way and in another. "all" pics with content are like this: http://i.imgur.com/nOsvW.png top and left shadowed, right and bottom cuttet.

played with all effects. only 1 will workaround this. the kwin effect snapshot helper (dont know the real name since i can not switch to another language.. seems to be broken too :/)
i need to disable this effect and now all windows where drawn in ksnapshot but now its impossible to take snapshots of "the window behind"
Comment 4 Thomas Lübking 2012-12-26 18:46:51 UTC
By disabling the snapshot effect, ksnapshot works like uncomposited (thus no transparency or hidden windows)

Unfortunately the link to the xrender shot seems dead? (404)
Comment 5 FabiB 2012-12-26 18:51:46 UTC
Created attachment 76024 [details]
xrandr composited ksnapshot
Comment 6 Thomas Lübking 2012-12-26 19:06:37 UTC
Hmm .. not the problem, but I smell we lack a sync here - can you try a patch?
Comment 7 Thomas Lübking 2012-12-28 13:32:02 UTC
ping?
other test: i bet your left arm, the you're usin the raster graphicssystem (kcmshell4 kwincompositing, 3rd tab) and i bet your right arm that in addition you'll not be able to cause this with the native graphicssystem.
confirmed?
Comment 8 FabiB 2012-12-28 13:39:23 UTC
(In reply to comment #7)
> ping?
> other test: i bet your left arm, the you're usin the raster graphicssystem
> (kcmshell4 kwincompositing, 3rd tab) and i bet your right arm that in
> addition you'll not be able to cause this with the native graphicssystem.
> confirmed?
seems like you're absoluteliy right. in native mode i cant reproduce it.

for the patch i can try it but its almost the first time so i dont know :s
Comment 9 Martin Flöser 2012-12-28 13:44:15 UTC
(In reply to comment #8)
> for the patch i can try it but its almost the first time so i dont know :s
build instructions for KWin: 
http://community.kde.org/KWin/Building
Comment 10 Thomas Lübking 2012-12-28 14:14:34 UTC
The problem is obvious ;-)
Thanks for the confirmation.
Comment 11 Thomas Lübking 2012-12-28 14:20:35 UTC
https://git.reviewboard.kde.org/r/107981/
Comment 12 Thomas Lübking 2013-01-02 18:00:21 UTC
Git commit 0c121a76264652470cf8891a40eadaf0f37c921a by Thomas Lübking.
Committed on 27/12/2012 at 22:01.
Pushed by luebking into branch 'KDE/4.10'.

finish / sync screenshot before calling ksnapshot
FIXED-IN: 4.10
REVIEW: 107981

M  +2    -0    kwin/effects/screenshot/screenshot.cpp

http://commits.kde.org/kde-workspace/0c121a76264652470cf8891a40eadaf0f37c921a
Comment 13 Thomas Lübking 2013-01-02 18:06:52 UTC
Git commit 7ab26e350c564fefa5fc5d82766811ac24a3c7c0 by Thomas Lübking.
Committed on 27/12/2012 at 22:01.
Pushed by luebking into branch 'master'.

finish / sync screenshot before calling ksnapshot
FIXED-IN: 4.10
REVIEW: 107981

M  +2    -0    kwin/effects/screenshot/screenshot.cpp

http://commits.kde.org/kde-workspace/7ab26e350c564fefa5fc5d82766811ac24a3c7c0
Comment 14 Martin Flöser 2013-01-21 15:52:40 UTC
*** Bug 313625 has been marked as a duplicate of this bug. ***