finish / sync screenshot before calling ksnapshot

BUG: 312209
FIXED-IN: 4.10
REVIEW: 107981